--- a/css/style.css
+++ b/css/style.css
@@ -11655,6 +11655,101 @@ h3.common-heading {
     background-size: cover;
 }
 
+.custom-game-service {
+	background: url(../images/services/game-development/custom-app-service-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.hire-div {
+	border: 2px solid #fff;
+	border-radius: 45px;
+}
+
+.hire-us {
+	width: 60%;
+	display: inline-block;
+	padding: 20px 0px 20px 20px;
+}
+
+.hire-img {
+	width: 38%;
+	display: inline-block;
+}
+
+.game-get-button {
+	background-color: #fff;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	padding: 5px 0px;
+	text-align: center;
+	width: 45%;
+}
+
+.hire-div img {
+	margin-top: -65px;
+    margin-left: 40px;
+}
+
+.game-benefits-section {
+	background: url(../images/services/game-development/mobile-game-benefits.webp) no-repeat;
+    background-size: cover;
+}
+
+.build-game-btn {
+	background-color: #fff;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	padding: 10px;
+	text-align: center;
+}
+
+.two-d-game {
+	background: url(../images/services/game-development/2d-game-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.three-d-game {
+	background: url(../images/services/game-development/3d-game-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.ar-game-section {
+	background: url(../images/services/game-development/ar-game-development-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.vr-game-section {
+	background: url(../images/services/game-development/vr-game-development-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.mr-game-section {
+	background: url(../images/services/game-development/mr-game-development-banner.webp) no-repeat;
+    background-size: cover;
+}
+
+.game-development-section {
+	background: -moz-linear-gradient(top,#0098C5 0,#101010 100%);
+	background: -webkit-linear-gradient(top,#0098C5 0,#101010 100%);
+	background: linear-gradient(to bottom,#0098C5 0,#101010 100%);
+}
+
+.game-dev {
+	position: relative;
+  	text-align: center;
+  	color: white;
+}
+
+.games-bottom-left {
+	position: absolute;
+  	bottom: 8px;
+  	left: 16px;
+}
+
+.game-development-icon {
+	padding: 0px 5px 0px 15px;
+}
+
 /* Timeline */
 
 .vertical-timeline {
