--- a/css/style.css
+++ b/css/style.css
@@ -12737,3 +12737,258 @@ h2.vero-about-heading {
     display: block;
     color: #000;
 }
+
+
+/* L-Drive */
+
+.serviceWeOffer .drive-box {
+	width: 100%;
+	margin: 10px auto;
+	position: relative;
+	perspective: 1000px;
+}
+
+.serviceWeOffer .drive-box .front-face {
+	/* height: 250px;
+	height: 220px; */
+	background: #fff;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
+	transition: all 0.5s ease;
+	text-align: center;
+}
+
+.drive-box .front-face .icon {
+	height: 80px;
+}
+
+.drive-box .front-face .icon i {
+	font-size: 65px;
+}
+
+.drive-box .front-face span,
+.drive-box .back-face span {
+	font-size: 22px;
+	font-weight: 600;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.drive-box .front-face span {
+	padding: 20px;
+}
+
+.drive-box .front-face .icon i,
+.drive-box .front-face span {
+
+	background: linear-gradient(0deg, rgba(82, 7, 7, 1) 0%, rgba(161, 7, 7, 1) 50%, rgba(213, 11, 11, 1) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.drive-box .front-face {
+	height: 250px !important;
+
+}
+
+.drive-box .back-face {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	height: 250px;
+	width: 100%;
+	padding: 30px;
+	color: #fff;
+	opacity: 0;
+	transform-style: preserve-3d;
+	backface-visibility: hidden;
+	background: linear-gradient(0deg, rgba(82, 7, 7, 1) 0%, rgba(161, 7, 7, 1) 50%, rgba(213, 11, 11, 1) 100%);
+	transform: translateY(110px) rotateX(-90deg);
+	box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
+	transition: all 0.5s ease;
+}
+
+.drive-box .back-face p {
+	margin-top: 10px;
+	text-align: justify;
+}
+
+.drive-box:hover .back-face {
+	opacity: 1;
+	transform: rotateX(0deg);
+}
+
+.drive-box:hover .front-face {
+	opacity: 0;
+	transform: translateY(-110px) rotateX(90deg);
+}
+
+.serviceWeOffer, .dealership {
+	background: linear-gradient(269.84deg, #000000 54.46%, #3C7494 154.18%);
+}
+
+.list-group-item {
+	border: none !important;
+	text-align: justify;
+	color: #000;
+	font-weight: 500;
+	font-family: 'B612', sans-serif;
+}
+
+.ftco-section {
+	background-image: url(../images/solutions/ldrive/bmw-animated.gif);
+	background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+
+.bg-hero {
+	position: relative;
+	z-index: 0;
+}
+
+.bg-hero:after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	content: '';
+	background: #000116;
+	opacity: .7;
+	z-index: -1;
+}
+
+.heading-section {
+	font-size: 28px;
+	color: #fff;
+}
+
+.no-gutters {
+	margin-right: 0;
+	margin-left: 0;
+}
+
+.no-gutters>.col,
+.no-gutters>[class*="col-"] {
+	padding-right: 0;
+	padding-left: 0;
+}
+
+.contact-wrap {
+	background: #fff;
+	border-radius: 10px; }
+  
+.info-wrap h3 {
+
+    font-size: 25px;
+	color: #fff;
+}
+.getinTouchHeading{
+	text-align: center;
+    font-size: 25px;
+	color: #000080;
+}
+
+.info-wrap .dbox {
+	width: 100%;
+	color: rgba(255, 255, 255, 0.7);
+	margin-bottom: 25px;
+}
+
+.info-wrap .dbox:last-child {
+	margin-bottom: 0;
+}
+
+.info-wrap .dbox p {
+	margin-bottom: 0;
+}
+
+.info-wrap .dbox p span {
+	font-weight: 400;
+	color: rgba(255, 255, 255, 0.4);
+	font-size: 20px;
+	display: block;
+	text-transform: uppercase;
+}
+
+.info-wrap .dbox p a {
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.7);
+}
+
+.info-wrap .dbox .icon {
+	margin-top: 10px;
+}
+
+.info-wrap .dbox .icon span {
+	font-size: 24px;
+	color: #fff;
+}
+
+.info-wrap .dbox .text {
+	width: 100%;
+}
+
+#form-message-warning, #form-message-success {
+	display: none; 
+}
+  
+#form-message-warning {
+	color: red; 
+}
+  
+#form-message-success {
+	color: #28a745;
+	font-size: 18px;
+	font-weight: 500; 
+}
+  
+  .submitting {
+	float: left;
+	width: 100%;
+	padding: 10px 0;
+	display: none;
+	font-size: 16px;
+	font-weight: 500; 
+}
+
+#contactForm .formControl {
+		font-size: 16px;
+}
+
+.formControl:focus{
+	border: 1px solid red!important;
+	box-shadow: 0 0 0 0.15rem rgb(255 0 0 / 40%)!important;
+}
+
+
+.cardSmartTouchA{
+	border: none!important;
+	border-radius: 20px!important;
+	padding: 20px;
+}
+
+::marker{
+	font-size: 20px;
+}
+
+.headingAboutSec{
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+	line-height: 40px;
+	color: #142432;
+}
+
+.advantagesList{
+	line-height: 24px;
+	list-style-type: disc;
+	padding: 20px 0px 0px 30px;
+}
